ei pysty lisätä tyhjiä käyttäjiä Lisätty tekstejä Profiilinimeen ja statukseen max yksi rivi

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -7,4 +7,6 @@
     <string name="flagInfoText">\\n(1 lippu = 2 emojia)</string>
     <string name="oopsText">Hups..</string>
     <string name="emojiLimitFullText">Emoji</string>
+    <string name="okText">ok</string>
+    <string name="allFieldsRequiedText">Kaikki kentät pitää olla täytettynä.</string>
 </resources>
