--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">Messenger</string>
-    <string name="app_version" translatable="false">0.03-alpha</string>
+    <string name="app_version" translatable="false">0.04-alpha</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -10,6 +10,6 @@
     <string name="flagInfoText">\\n(1 flag = 2 emojis)</string>
     <string name="oopsText">Oops..</string>
     <string name="emojiLimitFullText">Emoji limit full :(</string>
-    <string name="okText">ok</string>
-    <string name="allFieldsRequiedText">All fields must contain data</string>
+    <string name="okText">OK</string>
+    <string name="allFieldsRequiredText">All fields must contain data</string>
 </resources>
