--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">Messenger</string>
-    <string name="app_version" translatable="false">0.07-alpha</string>
+    <string name="app_version" translatable="false">0.08-alpha</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -12,4 +12,5 @@
     <string name="emojiLimitFullText">Emoji limit full :(</string>
     <string name="okText">OK</string>
     <string name="allFieldsRequiredText">All fields must contain data</string>
+    <string name="appVersionText">App version:</string>
 </resources>
